# PDF-to-CBT

./: .agent.md  .gitignore  .replit  README.md  app.py  evaluator.py  init_db.py  models.py  pdf_processor.py  pyproject.toml  question_analyzer.py  quick_setup.py  replit.md  requirements-dev.txt  requirements-minimal.txt  requirements-prod.txt  requirements.txt  routes.py  test_marking_scheme.py  utils.py
attached_assets/: Pasted--Gemini-CLI-Prompt-PDF-Question-Box-Extraction-Tool-Project-Overview-Create-a-PDF-based-test-t-1751901536230_1751901536231.txt
static/css/: custom.css
static/js/: box_detector.js  pdf_viewer.js  test_interface.js
templates/: 404.html  500.html  all_tests.html  answer_key.html  base.html  box_detection.html  index.html  results.html  test_interface.html  test_sessions.html  upload.html
