[tool.poetry]
name = "pdf-question-extraction-tool"
version = "1.0.0"
description = "PDF Question Extraction Tool for JEE Preparation"
author = "Your Name"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
SQLAlchemy = "^2.0.23"
Flask-SQLAlchemy = "^3.0.5"
PyMuPDF = "^1.23.8"
opencv-python = "^4.8.1.78"
numpy = "^1.24.3"
Pillow = "^10.0.1"
pytesseract = "^0.3.10"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
